# hwp_parser

./: .gitignore  README.md  pyproject.toml  to_xml.py
hwp_comparer/: hwp_parser.py  insert_text.py  test1.hwp  test_pyhwpx.py
test_files/: output.txt
test_pyhwpx_module/: create_table.py  read_text.py
