[tool.poetry]
name = "hwp-parser"
version = "0.1.0"
description = ""
authors = ["Madung2 <tuliphan91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
olefile = "^0.47"
openpyxl = "^3.1.4"
pywin32 = "^306"
pyhwpx = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
